# alpaca-quant

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  Makefile  README.md  pyproject.toml
configs/: alphas.yaml  app.yaml  costs.yaml  execution.yaml  llm.yaml  risk.yaml  strategies.yaml  universe.yaml
docs/: ARCHITECTURE.md  DATA_QUALITY.md  DECISIONS.md  EDGE_RESEARCH_PROTOCOL.md  RESEARCH_PROTOCOL.md  ROADMAP.md  SAFETY_POLICY.md  SIGNAL_CONTRACT.md
go/: go.mod
ops/monitoring/: README.md
ops/runbooks/: BROKER_OUTAGE.md  KILL_SWITCH.md  RECONCILIATION_FAILURE.md
python/alpaca_quant/: __init__.py  config.py
python/tests/: test_alpaca_bars.py  test_assemble_dataset_cli.py  test_backtest_costs.py  test_backtest_engine.py  test_backtest_metrics.py  test_backtest_null_battery.py  test_backtest_null_models.py  test_backtest_outcomes.py  test_compute_features_cli.py  test_config.py  test_data_contract.py  test_data_manifest.py  test_dataset_manifest.py  test_dataset_report.py  test_dry_run.py  test_dry_run_cli.py  test_duckdb_query.py  test_experiment_registry.py  test_experiment_report.py  test_experiment_runner.py  test_feature_registry.py  test_features_moving_averages.py  test_features_no_lookahead.py  test_features_pipeline.py  test_features_returns.py  test_imports.py  (+23 more)
scripts/: assemble_dataset.py  compute_features.py  inspect_dataset.py  inspect_research_dataset.py  list_experiments.py  list_feature_sets.py  list_fetch_runs.py  list_research_datasets.py  report_targets.py  run_controlled_historical_fetch.py  run_experiment.py  run_mock_ingestion_dry_run.py
(+71 files in other folders)
