[project]
name = "alpaca-quant"
version = "0.0.0"
description = "Solo systematic quant research platform — Alpaca Quant recommends, Max approves."
requires-python = ">=3.11"
dependencies = [
    "polars",
    "duckdb",
    "pyarrow",
    "pydantic",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
include = ["alpaca_quant*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["python"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
